# zulip-desktop-legacy

./: .gitignore  CMakeLists.txt  CPackOptions.cmake.in  HumbugApp.pro  HumbugCPack.cmake  LICENSE.txt  README.md  ZulipCPack.cmake  main.cpp
CMakeModules/: CTAddCompilerFlags.cmake  CTObjCARCSetEnabled.cmake  FindQJSON.cmake  NSIS.template.in
admin/: update_sparkle_xml.py
admin/icon/: zulip.xpm
admin/linux/: Zulip.desktop
admin/mac/: Growl Registration Ticket.growlRegDict  Info.plist  build-release-osx.sh  create-dmg.sh  macdeploy.py  make_package.sh  sign_bundle.rb  sparkle_pub.pem  zulip_sign_step.sh
admin/win/: make_msvc_package.bat  make_package.sh  update-vlc.sh
admin/win/nsi/: RELEASE_NOTES.txt
debian/: changelog  control  copyright  rules  zulip-desktop-sso.menu  zulip-desktop.menu
src/: CMakeLists.txt  Config.h.in  HumbugAboutDialog.cpp  HumbugAboutDialog.h  HumbugAboutDialog.ui  HumbugApplication.h  HumbugApplication_mac.mm  HumbugTrayIcon.cpp  HumbugTrayIcon.h  HumbugWebBridge.cpp  HumbugWebBridge.h  HumbugWindow.cpp  HumbugWindow.h  HumbugWindow.ui  IconRenderer.cpp  IconRenderer.h  Logger.cpp  Logger.h  PlatformInterface.cpp  PlatformInterface.h  Utils.cpp  Utils.h  WheelFilter.cpp  WheelFilter.h  ZulipAboutDialog.cpp  ZulipAboutDialog.h  ZulipAboutDialog.ui  ZulipApplication.cpp  ZulipApplication.h  ZulipWebBridge.cpp  ZulipWebBridge.h  ZulipWindow.cpp  ZulipWindow.h  ZulipWindow.ui  about.html  cookiejar.cpp  cookiejar.h  main.cpp  resources.qrc  zulip.ttc
src/images/: Zulip.icns
src/mac/: Converters.h  HumbugApplication_mac.mm  JSExtras.js  NSData+Base64.m  NSData+Base64.mm  PlatformInterface.mm  Setup.h  Setup.mm  Utils.h  Utils_mac.h  ZulipApplication_mac.mm
src/mac/launchhelper/: CMakeLists.txt  Info.plist
src/mac/launchhelper/src/: CMakeLists.txt  ZulipAppHelperDelegate.h  ZulipAppHelperDelegate.mm  main.cpp
src/preferences/: GeneralPreferences.cpp  GeneralPreferences.h  GeneralPreferences.ui  NotificationPreferences.cpp  NotificationPreferences.h  NotificationPreferences.ui
src/webview/: HWebView.cpp  HWebView.h  HWebView_mac.mm  Utils.h
src/win/: PlatformInterface_win.cpp
